--- a/src/main/webapp/relatorios/financeiro/sub_relatorio_financeiro_quantidade_executado.jrxml
+++ b/src/main/webapp/relatorios/financeiro/sub_relatorio_financeiro_quantidade_executado.jrxml
@@ -386,18 +386,18 @@
 					<paragraph leftIndent="2"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{executado}.getValorJaneiro()
-+($P{executado}.getValorFevereiro())
-+($P{executado}.getValorFevereiro())
-+($P{executado}.getValorMarco())
-+($P{executado}.getValorAbril())
-+($P{executado}.getValorMaio())
-+($P{executado}.getValorJunho())
-+($P{executado}.getValorJulho())
-+($P{executado}.getValorAgosto())
-+($P{executado}.getValorSetembro())
-+($P{executado}.getValorOutubro())
-+($P{executado}.getValorNovembro())
-+($P{executado}.getValorDezembro())]]></textFieldExpression>
+.add($P{executado}.getValorFevereiro())
+.add($P{executado}.getValorFevereiro())
+.add($P{executado}.getValorMarco())
+.add($P{executado}.getValorAbril())
+.add($P{executado}.getValorMaio())
+.add($P{executado}.getValorJunho())
+.add($P{executado}.getValorJulho())
+.add($P{executado}.getValorAgosto())
+.add($P{executado}.getValorSetembro())
+.add($P{executado}.getValorOutubro())
+.add($P{executado}.getValorNovembro())
+.add($P{executado}.getValorDezembro())]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
