--- a/src/main/webapp/relatorios/financeiro/sub_relatorio_financeiro_quantidade_planejado.jrxml
+++ b/src/main/webapp/relatorios/financeiro/sub_relatorio_financeiro_quantidade_planejado.jrxml
@@ -386,18 +386,18 @@
 					<paragraph leftIndent="2"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{planejado}.getValorJaneiro()
-+($P{planejado}.getValorFevereiro())
-+($P{planejado}.getValorFevereiro())
-+($P{planejado}.getValorMarco())
-+($P{planejado}.getValorAbril())
-+($P{planejado}.getValorMaio())
-+($P{planejado}.getValorJunho())
-+($P{planejado}.getValorJulho())
-+($P{planejado}.getValorAgosto())
-+($P{planejado}.getValorSetembro())
-+($P{planejado}.getValorOutubro())
-+($P{planejado}.getValorNovembro())
-+($P{planejado}.getValorDezembro())]]></textFieldExpression>
+.add($P{planejado}.getValorFevereiro())
+.add($P{planejado}.getValorFevereiro())
+.add($P{planejado}.getValorMarco())
+.add($P{planejado}.getValorAbril())
+.add($P{planejado}.getValorMaio())
+.add($P{planejado}.getValorJunho())
+.add($P{planejado}.getValorJulho())
+.add($P{planejado}.getValorAgosto())
+.add($P{planejado}.getValorSetembro())
+.add($P{planejado}.getValorOutubro())
+.add($P{planejado}.getValorNovembro())
+.add($P{planejado}.getValorDezembro())]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
