--- a/src/main/webapp/relatorios/quantitativo/relatorio_fisico_financeiro_mensal_acao.jrxml
+++ b/src/main/webapp/relatorios/quantitativo/relatorio_fisico_financeiro_mensal_acao.jrxml
@@ -25,8 +25,8 @@
 	<parameter name="param_prod_acao" class="java.lang.String" isForPrompting="false"/>
 	<field name="regiaoMunicipio" class="java.lang.String"/>
 	<field name="mes" class="java.lang.Integer"/>
-	<field name="quantidade" class="java.lang.Double"/>
-	<field name="valor" class="java.lang.Double"/>
+	<field name="quantidade" class="java.math.BigDecimal"/>
+	<field name="valor" class="java.math.BigDecimal"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -327,10 +327,10 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 						</cellContents>
 					</crosstabTotalColumnHeader>
 				</columnGroup>
-				<measure name="quantidadeMeasure" class="java.lang.Double" calculation="Sum">
+				<measure name="quantidadeMeasure" class="java.math.BigDecimal" calculation="Sum">
 					<measureExpression><![CDATA[$F{quantidade}]]></measureExpression>
 				</measure>
-				<measure name="valorMeasure" class="java.lang.Double" calculation="Sum">
+				<measure name="valorMeasure" class="java.math.BigDecimal" calculation="Sum">
 					<measureExpression><![CDATA[$F{valor}]]></measureExpression>
 				</measure>
 				<crosstabCell width="57" height="41">
@@ -338,7 +338,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 						<box>
 							<pen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						</box>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="57" height="21" backcolor="#EEEEEE" uuid="8e3a7c07-f171-4ae8-a1a1-312e20c822c8"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -349,12 +349,9 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[$V{quantidadeMeasure}==null ? "0" : $V{quantidadeMeasure}.intValue()==$V{quantidadeMeasure} ? (new DecimalFormat("#,##0")).format($V{quantidadeMeasure}) :
-
-
-(new DecimalFormat("#,##0.00")).format($V{quantidadeMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{quantidadeMeasure}]]></textFieldExpression>
 						</textField>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="21" width="57" height="20" backcolor="#EEEEEE" uuid="9e429174-8aa3-4e7b-abb5-3bff79df9eb7"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -365,7 +362,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[$V{valorMeasure}==null ? "0" : (new DecimalFormat("#,###,##0.00")).format($V{valorMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{valorMeasure}]]></textFieldExpression>
 						</textField>
 					</cellContents>
 				</crosstabCell>
@@ -374,7 +371,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 						<box>
 							<pen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						</box>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="57" height="16" backcolor="#C7C7C7" uuid="8004b78b-46ae-4f28-b7bd-90da8e2a1491"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -385,9 +382,9 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[$V{quantidadeMeasure}.intValue() == $V{quantidadeMeasure} ? (new DecimalFormat("#,##0")).format($V{quantidadeMeasure}) : (new DecimalFormat("#,##0.00")).format($V{quantidadeMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{quantidadeMeasure}]]></textFieldExpression>
 						</textField>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="16" width="57" height="15" backcolor="#C7C7C7" uuid="9e429174-8aa3-4e7b-abb5-3bff79df9eb7"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -398,7 +395,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[(new DecimalFormat("#,###,##0.00")).format($V{valorMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{valorMeasure}]]></textFieldExpression>
 						</textField>
 					</cellContents>
 				</crosstabCell>
@@ -407,7 +404,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 						<box>
 							<pen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						</box>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="53" height="21" backcolor="#EEEEEE" uuid="cc5db893-2305-4b2a-876a-7fb2d1f311ca"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -418,9 +415,9 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[$V{quantidadeMeasure}.intValue()==$V{quantidadeMeasure} ? (new DecimalFormat("#,##0")).format($V{quantidadeMeasure}) : (new DecimalFormat("#,##0.00")).format($V{quantidadeMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{quantidadeMeasure}]]></textFieldExpression>
 						</textField>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="21" width="53" height="20" backcolor="#EEEEEE" uuid="cc5db893-2305-4b2a-876a-7fb2d1f311ca"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -431,7 +428,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[(new DecimalFormat("#,###,##0.00")).format($V{valorMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{valorMeasure}]]></textFieldExpression>
 						</textField>
 					</cellContents>
 				</crosstabCell>
@@ -440,7 +437,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 						<box>
 							<pen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						</box>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="53" height="16" backcolor="#C7C7C7" uuid="238e0e15-3d88-40e8-bbb3-7363c456a6d5"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -451,9 +448,9 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[$V{quantidadeMeasure}.intValue() == $V{quantidadeMeasure} ? (new DecimalFormat("#,##0")).format($V{quantidadeMeasure}) : (new DecimalFormat("#,##0.00")).format($V{quantidadeMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{quantidadeMeasure}]]></textFieldExpression>
 						</textField>
-						<textField isStretchWithOverflow="true">
+						<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 							<reportElement style="Crosstab Data Text" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="16" width="53" height="15" backcolor="#C7C7C7" uuid="cc5db893-2305-4b2a-876a-7fb2d1f311ca"/>
 							<box rightPadding="3">
 								<topPen lineWidth="0.75"/>
@@ -464,7 +461,7 @@ $V{mes} == 12 ? "DEZ" : "MÊS INVÁLIDO"]]></textFieldExpression>
 							<textElement textAlignment="Right" verticalAlignment="Middle">
 								<font size="6"/>
 							</textElement>
-							<textFieldExpression><![CDATA[(new DecimalFormat("#,###,##0.00")).format($V{valorMeasure})]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$V{valorMeasure}]]></textFieldExpression>
 						</textField>
 					</cellContents>
 				</crosstabCell>
